style: fix image overflow on hover by restoring overflow hidden

--- a/style.css
+++ b/style.css
@@ -1035,6 +1035,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
 }
 
 @media (min-width: 992px) {
